--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ idna==3.10
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -37,7 +38,7 @@ rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-streamlit==1.38.0
+streamlit==1.39.0
 streamlit-antd-components==0.3.2
 tenacity==8.5.0
 toml==0.10.2
