--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 altair==5.4.1
 anyio==4.6.0
 attrs==24.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
@@ -38,7 +40,8 @@ rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-streamlit==1.40.1
+soupsieve==2.6
+streamlit==1.41.0
 streamlit-antd-components==0.3.2
 tenacity==8.5.0
 toml==0.10.2
