--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.4.1
+annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
 beautifulsoup4==4.12.3
@@ -8,13 +9,17 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+CVE-Prioritizer==1.7.2
+distro==1.9.0
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
 Jinja2==3.1.4
+jpype1==1.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 lxml==5.3.0
@@ -23,15 +28,19 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.8.2
 numpy==2.1.1
+openai==1.30.5
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 plotly==5.24.1
 protobuf==5.28.2
 pyarrow==17.0.0
+pydantic==2.10.5
+pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 referencing==0.35.1
 requests==2.32.3
@@ -41,12 +50,18 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
+sploitscan==0.11.0
 streamlit==1.41.1
 streamlit-antd-components==0.3.2
+tabula==1.0.5
+tabula-py==2.10.0
 tenacity==8.5.0
+termcolor==2.5.0
 toml==0.10.2
 tornado==6.4.2
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 watchdog==4.0.2
+webencodings==0.5.1
