--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-CVE-Prioritizer==1.7.2
+cve-prioritizer==1.8.1
 distro==1.9.0
 gitdb==4.0.11
 GitPython==3.1.43
@@ -50,8 +50,8 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
-sploitscan==0.11.0
-streamlit==1.41.1
+sploitscan==0.12.0
+streamlit==1.42.2
 streamlit-antd-components==0.3.2
 tabula==1.0.5
 tabula-py==2.10.0
