--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,19 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cve-prioritizer==1.8.1
+cve-prioritizer==1.9.0
 distro==1.9.0
 gitdb==4.0.11
-GitPython==3.1.43
+GitPython==3.1.44
+google-auth==2.38.0
+google-genai==1.3.0
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.5
-httpx==0.27.2
+httpx==0.28.1
 idna==3.10
-Jinja2==3.1.4
+Jinja2==3.1.5
+jiter==0.9.0
 jpype1==1.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -35,6 +38,8 @@ pillow==10.4.0
 plotly==5.24.1
 protobuf==5.28.2
 pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.10.5
 pydantic_core==2.27.2
 pydeck==0.9.1
@@ -46,12 +51,13 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
+rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
-sploitscan==0.12.0
-streamlit==1.42.2
+sploitscan==0.11.0
+streamlit==1.45.0
 streamlit-antd-components==0.3.2
 tabula==1.0.5
 tabula-py==2.10.0
@@ -65,3 +71,4 @@ tzdata==2024.2
 urllib3==2.2.3
 watchdog==4.0.2
 webencodings==0.5.1
+websockets==14.2
