--- a/requirements.txt
+++ b/requirements.txt
@@ -11,20 +11,24 @@ click==8.1.7
 colorama==0.4.6
 cve-prioritizer==1.9.0
 distro==1.9.0
+executing==2.2.0
 gitdb==4.0.11
 GitPython==3.1.44
 google-auth==2.38.0
 google-genai==1.3.0
+googleapis-common-protos==1.70.0
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.5
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
 Jinja2==3.1.5
 jiter==0.9.0
 jpype1==1.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+logfire==3.22.1
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -32,6 +36,13 @@ mdurl==0.1.2
 narwhals==1.8.2
 numpy==2.2.2
 openai==1.30.5
+opentelemetry-api==1.34.1
+opentelemetry-exporter-otlp-proto-common==1.34.1
+opentelemetry-exporter-otlp-proto-http==1.34.1
+opentelemetry-instrumentation==0.55b1
+opentelemetry-proto==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-semantic-conventions==0.55b1
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
@@ -57,7 +68,7 @@ smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 sploitscan==0.11.0
-streamlit==1.45.0
+streamlit==1.46.1
 streamlit-antd-components==0.3.2
 tabula==1.0.5
 tabula-py==2.10.0
@@ -69,6 +80,9 @@ tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+vulncheck_sdk==0.0.13
 watchdog==4.0.2
 webencodings==0.5.1
 websockets==14.2
+wrapt==1.17.2
+zipp==3.23.0
