--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.3.2
 cve-prioritizer==1.9.0
+cycler==0.12.1
 distro==1.9.0
 executing==2.2.0
+fonttools==4.58.5
 gitdb==4.0.11
 GitPython==3.1.44
 google-auth==2.38.0
@@ -28,10 +31,12 @@ jiter==0.9.0
 jpype1==1.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.8
 logfire==3.22.1
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.10.3
 mdurl==0.1.2
 narwhals==1.8.2
 numpy==2.2.2
@@ -55,6 +60,7 @@ pydantic==2.10.5
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.18.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -63,12 +69,13 @@ requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
 rsa==4.9
+seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 sploitscan==0.11.0
-streamlit==1.46.1
+streamlit==1.47.1
 streamlit-antd-components==0.3.2
 tabula==1.0.5
 tabula-py==2.10.0
