--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altair==5.4.1
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
@@ -10,7 +10,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 contourpy==1.3.2
-cve-prioritizer==1.9.0
+cve-prioritizer==1.10.1
 cycler==0.12.1
 distro==1.9.0
 executing==2.2.0
@@ -38,7 +38,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.10.3
 mdurl==0.1.2
-narwhals==1.8.2
+narwhals==2.0.1
 numpy==2.2.2
 openai==1.30.5
 opentelemetry-api==1.34.1
@@ -70,12 +70,13 @@ rich==13.8.1
 rpds-py==0.20.0
 rsa==4.9
 seaborn==0.13.2
+shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 sploitscan==0.11.0
-streamlit==1.47.1
+streamlit==1.48.0
 streamlit-antd-components==0.3.2
 tabula==1.0.5
 tabula-py==2.10.0
@@ -84,6 +85,7 @@ termcolor==2.5.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
+typer==0.16.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
